--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
-<h1>Hello!</h1>
-<h3>For any further questions: zieba@mpia.de</h3>
+<h1>Hi there! ... You get to see work in progress ...</h1>
+<h2>My name is Sebastian Zieba</h2>
+<h2>PhD student at the MPIA in Heidelberg, Germany</h2>
+
+<h3>to add: well everything... cv, my work, interests, link to github, orcid id, publications, ... jesus</h3>
+
+<h3>For any further questions, please don't hesitate to ask me: zieba@mpia.de</h3>
