updated website (first complete version)

--- a/pages/home.html
+++ b/pages/home.html
@@ -32,7 +32,7 @@
 <meta property="og:url" content=""/>
 <meta property="og:image" content="images/profile.jpg">
 
-  <title>sebastian-zieba &ndash; Sebastian Zieba</title>
+  <title>sebastian-zieba &ndash; Home</title>
 
 </head>
 <body>
@@ -46,8 +46,11 @@
 
       <nav>
         <ul class="list">
-          <li><a href="/#sebastian-zieba">Sebastian Zieba</a></li>
+          <li><a href="/#home">Home</a></li>
 
+          <li><a href="http://getpelican.com/" target="_blank">Pelican</a></li>
+          <li><a href="http://python.org/" target="_blank">Python.org</a></li>
+          <li><a href="http://jinja.pocoo.org/" target="_blank">Jinja2</a></li>
         </ul>
       </nav>
 
@@ -65,29 +68,12 @@
 <article class="single">
   <header>
     
-    <h1 id="sebastian-zieba">Sebastian Zieba</h1>
+    <h1 id="home">Home</h1>
   </header>
   <div>
-<h4>PhD student at MPIA, Heidelberg (Germany)</h4>
-<p>My research revolves around the characterization of <strong>exoplanets</strong> with space telescopes like Spitzer and Kepler, and the discovery of <strong>exocomets</strong> with TESS.</p>
-<p>To read my <strong>CV</strong> including a selection of my <strong>publications</strong>, click <a href="/pdfs/cv_zieba.pdf">here</a>.</p>
-<p>To be redirected to my <strong>ORCID</strong> website, click <a href="https://orcid.org/0000-0003-0562-6750">here</a>.</p>
-<h3>Contact</h3>
-<p>Do not hesitate to contact me if you have any questions!</p>
-<ul>
-<li>email:</li>
-</ul>
-<p>zieba@mpia.de</p>
-<ul>
-<li>address:</li>
-</ul>
-<p>Max-Planck-Institut für Astronomie</p>
-<p>Sebastian Zieba</p>
-<p>Königstuhl 17</p>
-<p>69117 Heidelberg</p>
-<h3>About me</h3>
-<p>I grew up in Salzburg, Austria. After finishing high school, I moved to Innsbruck (Austria) to do my Bachelor and Master in Physics and Astrophysics, respectively. I am currently living in Heidelberg and a PhD student at MPIA.</p>
-<p>Last update: July 2020</p>  </div>
+<p>save as: index.html</p>
+<h1>Hello</h1>
+<p><a href="/pdfs/cv.pdf">My CV</a></p>  </div>
 </article>
 
     <footer>
