--- a/archives.html
+++ b/archives.html
@@ -10,7 +10,8 @@
 
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet/less" type="text/css" href="/theme/stylesheet/style.less">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.1/less.min.js" type="text/javascript"></script>
 
   <link rel="stylesheet" type="text/css" href="/theme/pygments/github.min.css">
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/font-awesome.min.css">
@@ -29,6 +30,7 @@
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content=""/>
+<meta property="og:image" content="images/profile.jpg">
 
   <title>sebastian-zieba &ndash;     Archives
 </title>
@@ -38,24 +40,21 @@
   <aside>
     <div>
       <a href="">
-        <img src="/theme/img/profile.png" alt="" title="">
+        <img src="images/profile.jpg" alt="" title="">
       </a>
       <h1><a href=""></a></h1>
 
 
       <nav>
         <ul class="list">
+          <li><a href="/#sebastian-zieba">Sebastian Zieba</a></li>
 
-          <li><a href="http://getpelican.com/" target="_blank">Pelican</a></li>
-          <li><a href="http://python.org/" target="_blank">Python.org</a></li>
-          <li><a href="http://jinja.pocoo.org/" target="_blank">Jinja2</a></li>
-          <li><a href="#" target="_blank">About</a></li>
         </ul>
       </nav>
 
       <ul class="social">
-        <li><a class="sc-You can add links in your config file" href="#" target="_blank"><i class="fa fa-You can add links in your config file"></i></a></li>
-        <li><a class="sc-Another social link" href="#" target="_blank"><i class="fa fa-Another social link"></i></a></li>
+        <li><a class="sc-twitter" href="https://twitter.com/cyberzieba" target="_blank"><i class="fa fa-twitter"></i></a></li>
+        <li><a class="sc-github" href="https://github.com/sebastian-zieba" target="_blank"><i class="fa fa-github"></i></a></li>
       </ul>
     </div>
 
@@ -90,7 +89,7 @@
   "@type" : "Blog",
   "name": " sebastian-zieba ",
   "url" : "",
-  "image": "",
+  "image": "images/profile.jpg",
   "description": ""
 }
 </script>
