updated website with k2-141b

--- a/index.html
+++ b/index.html
@@ -70,6 +70,17 @@
   <div>
 <h4>PhD student at MPIA, Heidelberg (Germany)</h4>
 <p>My research revolves around the characterization of <strong>exoplanets</strong> with space telescopes like Spitzer and Kepler, and the discovery of <strong>exocomets</strong> with TESS.</p>
+<p>In my latest work we analysed Spitzer and Kepler observations to analyse the lava planet K2-141 b. </p>
+
+<div class="row">
+  <div class="column">
+  <img src="images/k2.png" alt="Snow" style="width:45%">
+  </div>
+  <div class="column">
+  <img src="images/spitzer.png" alt="Forest" style="width:45%">
+  </div>
+</div>
+
 <p>To read my <strong>CV</strong> including a selection of my <strong>publications</strong>, click <a href="/pdfs/cv_zieba.pdf">here</a>.</p>
 <p>To be redirected to my <strong>ORCID</strong> website, click <a href="https://orcid.org/0000-0003-0562-6750">here</a>.</p>
 <h3>Contact</h3>
