updated website with k2-141b

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <div>
 <h4>PhD student at MPIA, Heidelberg (Germany)</h4>
 <p>My research revolves around the characterization of <strong>exoplanets</strong> with space telescopes like Spitzer and Kepler, and the discovery of <strong>exocomets</strong> with TESS.</p>
-<p>In my latest work we analysed Spitzer and Kepler observations to analyse the lava planet K2-141 b. </p>
+<p>In my latest work titled "K2 and Spitzer phase curves of the rocky ultra-short-period planet K2-141 b hint at a tenuous rock vapor atmosphere" we analysed Spitzer and Kepler observations to analyse the lava planet K2-141 b. Below you can see the K2 and Spitzer phase curves for the planet. We find no significant hotspot offset for the planet (no thick, low molecular weight atmosphere). However, highly irradiated rocky planets like K2-141 b will experience outgassing from their surfaces and the creation of a thin rock vapor atmosphere. Atmospheric modeling shows us that certain species in these rock vapor atmospheres like sodium can create a thermal inversion in the optical wavelengths. This scenario is consistent with our analysis of the observations as we observed a significant emission in the Kepler bandpass.</p>
 
 <div class="row">
   <div class="column">
