updated index.html, CV and added PACMAN

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
   </header>
   <div>
 <h4>PhD student at MPIA, Heidelberg (Germany)</h4>
-<p>My research revolves around the characterization of <strong>exoplanets</strong> with space telescopes like Spitzer and Kepler, and the discovery of <strong>exocomets</strong> with TESS.</p>
+<p>My research revolves around the characterization of <strong>exoplanets</strong> with space telescopes like Spitzer, Hubble, JWST, and the discovery of <strong>exocomets</strong> with TESS.</p>
+
+  <title>The lava planet K2-141 b</title>
+
 <p>In my latest work titled "K2 and Spitzer phase curves of the rocky ultra-short-period planet K2-141 b hint at a tenuous rock vapor atmosphere" we analysed Spitzer and Kepler observations to analyse the lava planet K2-141 b. Below you can see the K2 and Spitzer phase curves for the planet. We find no significant hotspot offset for the planet (no thick, low molecular weight atmosphere). However, highly irradiated rocky planets like K2-141 b will experience outgassing from their surfaces and the creation of a thin rock vapor atmosphere. Atmospheric modeling shows us that certain species in these rock vapor atmospheres like sodium can create a thermal inversion in the optical wavelengths. This scenario is consistent with our analysis of the observations as we observed a significant emission in the Kepler bandpass.</p>
 
 <div class="row">
@@ -81,7 +84,14 @@
   </div>
 </div>
 
-<p>To read my <strong>CV</strong> including a selection of my <strong>publications</strong>, click <a href="/pdfs/cv_zieba.pdf">here</a>.</p>
+  <title>PACMAN: a pipeline to reduce and analyze Hubble/Wide Field Camera 3 (WFC3) observations of transiting exoplanets</title>
+
+<img src="/images/Pacman_V2.gif" alt="The PACMAN logo which shows a yellow PACMAN eating up Hubble exposures and leaving a transit fit behind."  width="250" />
+
+<p>If you want to reduce some HST observations taken with one of the WFC3 Grisms (G102 or G141), check out PACMAN! It is an end-to-end pipeline, beginning with a time series of 2D images and ending with a spectrum for the planet. PACMAN can easily fit multiple observations simultaneously and is completely open source hosted on <a href="https://github.com/sebastian-zieba/PACMAN">Github</a> and <a href="https://pacmandocs.readthedocs.io/en/latest/">well-documented</a>. If you want to use it for your observations and need help, don't hesitate to reach out!</p>
+
+<p>To read my <strong>CV</strong> including a selection of my <strong>publications</strong>, click <a href="/pdfs/Zieba_Sebastian_CV_Aug_2022.pdf">here</a>.</p>
+<p>To see a full list <strong>my entries on ADS</strong>, click <a href="https://ui.adsabs.harvard.edu/search/q=orcid%3A0000-0003-0562-6750&sort=date%20desc%2C%20bibcode%20desc&p_=0">here</a>.</p>
 <p>To be redirected to my <strong>ORCID</strong> website, click <a href="https://orcid.org/0000-0003-0562-6750">here</a>.</p>
 <h3>Contact</h3>
 <p>Do not hesitate to contact me if you have any questions!</p>
@@ -98,7 +108,7 @@
 <p>69117 Heidelberg</p>
 <h3>About me</h3>
 <p>I grew up in Salzburg, Austria. After finishing high school, I moved to Innsbruck (Austria) to do my Bachelor and Master in Physics and Astrophysics, respectively. I am currently living in Heidelberg and a PhD student at MPIA.</p>
-<p>Last update: July 2020</p>  </div>
+<p>Last update: August 2022</p>  </div>
 </article>
 
     <footer>
