--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
 <p>In my latest work titled "K2 and Spitzer phase curves of the rocky ultra-short-period planet K2-141 b hint at a tenuous rock vapor atmosphere" we analysed Spitzer and Kepler observations to analyse the lava planet K2-141 b. Below you can see the K2 and Spitzer phase curves for the planet. We find no significant hotspot offset for the planet (no thick, low molecular weight atmosphere). However, highly irradiated rocky planets like K2-141 b will experience outgassing from their surfaces and the creation of a thin rock vapor atmosphere. Atmospheric modeling shows us that certain species in these rock vapor atmospheres like sodium can create a thermal inversion in the optical wavelengths. This scenario is consistent with our analysis of the observations as we observed a significant emission in the Kepler bandpass.</p>
 
 <div class="row">
-  <div class="column">
+  <div class="row">
   <img src="images/k2.png" alt="Snow" style="width:45%">
   </div>
-  <div class="column">
+  <div class="row">
   <img src="images/spitzer.png" alt="Forest" style="width:45%">
   </div>
 </div>
 
   <title>PACMAN: a pipeline to reduce and analyze Hubble/Wide Field Camera 3 (WFC3) observations of transiting exoplanets</title>
 
-<img src="/images/Pacman_V2.gif" alt="The PACMAN logo which shows a yellow PACMAN eating up Hubble exposures and leaving a transit fit behind."  width="250" />
+<img src="/images/Pacman_V2.gif" alt="The PACMAN logo which shows a yellow PACMAN eating up Hubble exposures and leaving a transit fit behind."  width="75%" />
 
 <p>If you want to reduce some HST observations taken with one of the WFC3 Grisms (G102 or G141), check out PACMAN! It is an end-to-end pipeline, beginning with a time series of 2D images and ending with a spectrum for the planet. PACMAN can easily fit multiple observations simultaneously and is completely open source hosted on <a href="https://github.com/sebastian-zieba/PACMAN">Github</a> and <a href="https://pacmandocs.readthedocs.io/en/latest/">well-documented</a>. If you want to use it for your observations and need help, don't hesitate to reach out!</p>
 
