--- a/index.html
+++ b/index.html
@@ -71,20 +71,20 @@
 <h4>PhD student at MPIA, Heidelberg (Germany)</h4>
 <p>My research revolves around the characterization of <strong>exoplanets</strong> with space telescopes like Spitzer, Hubble, JWST, and the discovery of <strong>exocomets</strong> with TESS.</p>
 
-  <title>The lava planet K2-141 b</title>
+<h4>The lava planet K2-141 b</h4>
 
 <p>In my latest work titled "K2 and Spitzer phase curves of the rocky ultra-short-period planet K2-141 b hint at a tenuous rock vapor atmosphere" we analysed Spitzer and Kepler observations to analyse the lava planet K2-141 b. Below you can see the K2 and Spitzer phase curves for the planet. We find no significant hotspot offset for the planet (no thick, low molecular weight atmosphere). However, highly irradiated rocky planets like K2-141 b will experience outgassing from their surfaces and the creation of a thin rock vapor atmosphere. Atmospheric modeling shows us that certain species in these rock vapor atmospheres like sodium can create a thermal inversion in the optical wavelengths. This scenario is consistent with our analysis of the observations as we observed a significant emission in the Kepler bandpass.</p>
 
 <div class="row">
-  <div class="row">
-  <img src="images/k2.png" alt="Snow" style="width:45%">
+  <div class="column">
+  <img src="images/k2.png" alt="Snow" style="width:40%">
   </div>
-  <div class="row">
-  <img src="images/spitzer.png" alt="Forest" style="width:45%">
+  <div class="column">
+  <img src="images/spitzer.png" alt="Forest" style="width:40%">
   </div>
 </div>
 
-  <title>PACMAN: a pipeline to reduce and analyze Hubble/Wide Field Camera 3 (WFC3) observations of transiting exoplanets</title>
+<h4>PACMAN: a pipeline to reduce and analyze Hubble/Wide Field Camera 3 (WFC3) observations of transiting exoplanets</h4>
 
 <img src="/images/Pacman_V2.gif" alt="The PACMAN logo which shows a yellow PACMAN eating up Hubble exposures and leaving a transit fit behind."  width="75%" />
 
