--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 <div class="row">
     
   <figure>
-    <img src="images/k2.png" alt="Snow" style="width:40%">
+    <img src="images/k2.png" alt="Snow" style="width:40">
   </figure>
   <figure>
-    <img src="images/spitzer.png" alt="Forest" style="width:40%">
+    <img src="images/spitzer.png" alt="Forest" style="width:40">
   </figure>
 </div>
 
